Add WCAG compliance analysis features
- Add analyze_contrast tool for per-region contrast analysis
- Add get_wcag_report tool to generate JSON reports of non-compliant regions
- Integrate kontrasto library for WCAG 2.0 contrast checking
- Add PyMuPDF for direct PDF text extraction
- Update .gitignore to exclude virtual environments and generated files
- Support quality parameter for faster analysis on large PDFs

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ wheels/
 
 # Virtual Environment
 venv/
+.venv/
 ENV/
 env/
 
@@ -45,6 +46,18 @@ htmlcov/
 *.tmp
 *.bak
 tmp/
+
+# Generated reports
+wcag_compliance_report.txt
+*_report.txt
+*_compliance*.txt
+
+# Generated images/outputs (from tool usage)
+*.png
+*.jpg
+*.jpeg
+*.gif
+!*.md  # Don't ignore markdown files
 
 # MCP Configuration (contains API keys)
 .mcp.json
